--- a/about.html
+++ b/about.html
@@ -59,8 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li><a href="homepage.html">Home</a></li>
-									<ul class="sub-menu">
+								<li><a href="#">Home</a>
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
