--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li><a href="#">Home</a>
+								<li class="current-list-item"><a href="#">Home</a>
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
