--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
-								<!--li><a href="#">Pages</a>
+								<li><a href="#">Pages</a>
 									<ul class="sub-menu">
 										<li><a href="404.html">404 page</a></li>
 										<li><a href="about.html">About</a></li>
@@ -79,7 +79,7 @@
 										<li><a href="news.html">News</a></li>
 										<li><a href="single-news.html">Single News</a></li>
 									</ul>
-								</li-->
+								</li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="shop.html">Shop</a>
 									<ul class="sub-menu">
