--- a/checkout.html
+++ b/checkout.html
@@ -66,7 +66,7 @@
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
-								<!--li><a href="#">Pages</a>
+								<li><a href="#">Pages</a>
 									<ul class="sub-menu">
 										<li><a href="404.html">404 page</a></li>
 										<li><a href="about.html">About</a></li>
@@ -91,7 +91,7 @@
 										<li><a href="single-product.html">Single Product</a></li>
 										<li><a href="cart.html">Cart</a></li>
 									</ul>
-								</li-->
+								</li>
 								<li>
 									<div class="header-icons">
 										<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
