--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="index.html">
-								<img src="assets/img/logo2.png">
+								<img src="assets/img/logo2.png"height=72 width=72 alt="">
 							</a>
 						</div>
 						<!-- logo -->
@@ -59,8 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
-									</ul>
+								<li><a href="index.html">Home</a></li>
 								</li>
 								<li><a href="about.html">About</a></li>
 								<!--li><a href="#">Pages</a>
@@ -200,7 +199,7 @@
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
 							<li>No. 428, Sungai Klau, 27630, Raub, Pahang, Malaysia</li>
-							<li>support@fruitkha.com</li>
+							<li>fookgorking@gmail.com</li>
 							<li>+60146600288</li>
 						</ul>
 					</div>
