--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li><a href="index.html">Home</a></li><a href="#">
-									</li>
-									<ul class="sub-menu">
-										<li><a href="index.html">Static Home</a></li>
-										<li><a href="index_2.html">Slider Home</a></li>
+								<li><a href="index.html">Home</a>
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
