--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="index.html">Home</a></li>
+								<li class="current-list-item"><a href="index.html">Home</a>
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
