--- a/index_2.html
+++ b/index_2.html
@@ -9,7 +9,7 @@
 	<!-- title -->
 	<title>Fook Gor Durian Farm - Slider Version</title>
 
-	<!-- favicon -->
+	<!-- logo2 -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/logo2.png"height=72 width=72 alt="">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
