--- a/single-product.html
+++ b/single-product.html
@@ -9,7 +9,7 @@
 	<!-- title -->
 	<title>Single Product</title>
 
-	<!-- favicon -->
+	<!-- logo2 -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/logo2.png">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
