--- a/shop.html
+++ b/shop.html
@@ -59,11 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
-									<ul class="sub-menu">
-										<li><a href="index.html">Static Home</a></li>
-										<li><a href="index_2.html">Slider Home</a></li>
-									</ul>
+								<li><a href="index.html">Home</a></li>
 								</li>
 								<li><a href="about.html">About</a></li>
 								<!--li><a href="#">Pages</a>
