--- a/single-product.html
+++ b/single-product.html
@@ -10,7 +10,7 @@
 	<title>Single Product</title>
 
 	<!-- logo2 -->
-	<link rel="shortcut icon" type="image/png" href="assets/img/logo2.png/favicon.ico">
+	<link rel="shortcut icon" type="image/png" href="assets/img/logo2.png">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -59,11 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
-									<ul class="sub-menu">
-										<li><a href="index.html">Static Home</a></li>
-										<li><a href="index_2.html">Slider Home</a></li>
-									</ul>
+								<li><a href="index.html">Home</a></li>
 								</li>
 								<li><a href="about.html">About</a></li>
 								<!--li><a href="#">Pages</a>
