--- a/index_2.html
+++ b/index_2.html
@@ -9,8 +9,8 @@
 	<!-- title -->
 	<title>Fook Gor Durian Farm - Slider Version</title>
 
-	<!-- logo2 -->
-	<link rel="shortcut icon" type="image/png" href="assets/img/logo2.png"height=72 width=72 alt="">
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
