--- a/single-news.html
+++ b/single-news.html
@@ -9,8 +9,8 @@
 	<!-- title -->
 	<title>Single News</title>
 
-	<!-- logo2 -->
-	<link rel="shortcut icon" type="image/png" href="assets/img/logo2.png/favicon.ico">
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
