--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Fook Gor Durian Farm</title>
 
 	<!-- favicon -->
-	<link rel="shortcut icon" type="image/png" href="assets/img/images/favicon.png">
+	<link rel="shortcut icon" type="image/png" href="assets/img/packed images/favicon.png">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -215,7 +215,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/packed durian.JPG" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/packed durian.JPG"height=768px width=960px alt=""></a>
 						</div>
 						<h3>Packed Durian</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
