--- a/cart.html
+++ b/cart.html
@@ -59,8 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li><a href="#">Home</a>
-									</ul>
+								<li><a href="index.html">Home</a></li>
 								</li>
 								<li><a href="about.html">About</a></li>
 								<!--li><a href="#">Pages</a>
