--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/packed durian.JPG"height=768px width=960px alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/packed durian.JPG"alt=""></a>
 						</div>
 						<h3>Packed Durian</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
