--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 			<div class="row">
 				<!div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
-						<!--h3><span class="orange-text">Our</span> News</h3>
+						<h3><span class="orange-text">Our</span> News</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
 					</div>
 				</div>
@@ -420,7 +420,7 @@
 			</div>
 		</div>
 	</div>
-	< end latest news -->
+	<!-- end latest news -->
 
 	<!-- logo carousel -->
 	<div class="logo-carousel-section">
