--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 	<!-- end shop banner -->
 
 	<!-- latest news -->
-	<div class="latest-news pt-150 pb-150">
+	<!--div class="latest-news pt-150 pb-150">
 		<div class="container">
 
 			<div class="row">
