--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">
 						<h3>Our <span class="orange-text">Team</span></h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+						<!--p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p-->
 					</div>
 				</div>
 			</div>
@@ -225,7 +225,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-team-item">
 						<div class="team-bg team-bg-1"></div>
-						<h4>Chan Lai Fook <span>Farmer</span></h4>
+						<h4>Chan Lai Fook <span>Owner/Farmer</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -236,7 +236,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-team-item">
 						<div class="team-bg team-bg-2"></div>
-						<h4>Michael Chan <span>Farmer</span></h4>
+						<h4>Michael Chan <span>Owner/Farmer</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -247,7 +247,7 @@
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
 					<div class="single-team-item">
 						<div class="team-bg team-bg-3"></div>
-						<h4>Chan Yao Joe <span>Farmer</span></h4>
+						<h4>Chan Yao Joe <span>Owner/Farmer</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -271,7 +271,7 @@
 								<img src="assets/img/avaters/avatar1.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Chan Lai Fook <span>Local shop owner</span></h3>
+								<h3>Chan Lai Fook <span>Owner</span></h3>
 								<p class="testimonial-body">
 									" Over the years, we have cultivated a wide variety of durian cultivars, each celebrated for its unique taste and aroma. Our commitment to quality is unwavering. We understand that the true essence of a Pahang durian lies in its flavor, aroma, and freshness. "
 								</p>
@@ -285,7 +285,7 @@
 								<img src="assets/img/avaters/avatar2.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Michael Chan <span>Local shop owner</span></h3>
+								<h3>Michael Chan <span>Owner</span></h3>
 								<p class="testimonial-body">
 									" We are dedicated to preserving the environment and maintaining sustainable farming practices. Our durian trees are nurtured with care, and we strive to minimize our ecological footprint to ensure the long-term health of our farm and the surrounding ecosystem. "
 								</p>
@@ -299,7 +299,7 @@
 								<img src="assets/img/avaters/avatar3.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Chan Yao Joe <span>Local shop owner</span></h3>
+								<h3>Chan Yao Joe <span>Owner</span></h3>
 								<p class="testimonial-body">
 									" I believe that every durian should be a moment of culinary delight and cultural appreciation. "
 								</p>
