--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-bg">
-						<a href="https://youtu.be/UmO0wrD3nRg?si=Qd31pE2jWw70novs" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
+						<a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/UmO0wrD3nRg?si=xzsO3Y8l3OOFNlCv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
