--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-bg">
-						<a href="src="https://www.youtube.com/embed/UmO0wrD3nRg? title="YouTube video player" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
+						<a href="https://youtu.be/UmO0wrD3nRg?si=8xfQCMh5vpj5iztA" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
