--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-bg">
-						<a href="https://youtu.be/UmO0wrD3nRg?si=8xfQCMh5vpj5iztA" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/UmO0wrD3nRg?si=iiTbr4yb4hK7RTs-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><i class="fas fa-play"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
@@ -426,7 +426,7 @@
 	<div class="logo-carousel-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-lg-6 col-md-12">
 					<div class="logo-carousel-inner">
 						<div class="single-logo-item">
 							<img src="assets/img/company-logos/1.png" alt="">
