--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-bg">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/UmO0wrD3nRg?si=iiTbr4yb4hK7RTs-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><i class="fas fa-play"></i></a>
+						<a href="https://www.youtube.com/watch?v=UmO0wrD3nRg?si=tF4z3nj24J-XEAKj" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
