--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     	<div class="price-box">
                         	<div class="inner-price">
                                 <span class="price">
-                                    <strong>30%</strong> <br> off per kg
+                                    <strong>20%</strong> <br> off per kg
                                 </span>
                             </div>
                         </div>
@@ -260,7 +260,7 @@
                     <h4>Hikan Strwaberry</h4>
                     <div class="text">Quisquam minus maiores repudiandae nobis, minima saepe id, fugit ullam similique! Beatae, minima quisquam molestias facere ea. Perspiciatis unde omnis iste natus error sit voluptatem accusant</div>
                     <!--Countdown Timer-->
-                    <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2020/2/01"><div class="counter-column"><div class="inner"><span class="count">00</span>Days</div></div> <div class="counter-column"><div class="inner"><span class="count">00</span>Hours</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Mins</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Secs</div></div></div></div>
+                    <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2023/12/28"><div class="counter-column"><div class="inner"><span class="count">00</span>Days</div></div> <div class="counter-column"><div class="inner"><span class="count">00</span>Hours</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Mins</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Secs</div></div></div></div>
                 	<a href="cart.html" class="cart-btn mt-3"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
                 </div>
             </div>
@@ -350,8 +350,10 @@
 	<section class="shop-banner">
     	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
-            <div class="sale-percent"><span>Sale! <br> Upto</span>20% <span>off</span></div>
+            <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
+               </div>
+            <img src="assets/img/a.jpg" alt="">
         </div>
     </section>
 	<!-- end shop banner -->
@@ -426,7 +428,7 @@
 	<div class="logo-carousel-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6 col-md-12">
+				<div class="col-lg-12">
 					<div class="logo-carousel-inner">
 						<div class="single-logo-item">
 							<img src="assets/img/company-logos/1.png" alt="">
