--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
 									</div>
 									<div class="content">
 										<h3>Home Delivery</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<p>With our swift and efficient delivery system, savor the distinct flavors and heavenly aroma of these delectable fruits without leaving your doorstep.</p>
 									</div>
 								</div>
 							</div>
@@ -166,7 +166,7 @@
 									</div>
 									<div class="content">
 										<h3>Best Price</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<p>Our passion for delivering the best extends to ensuring affordability without compromising on the sumptuousness of these sought-after fruits.</p>
 									</div>
 								</div>
 							</div>
@@ -176,7 +176,7 @@
 										<i class="fas fa-briefcase"></i>
 									</div>
 									<div class="content">
-										<h3>Custom Box</h3>
+										<!--h3>Custom Box</h3>
 										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
 									</div>
 								</div>
@@ -188,7 +188,7 @@
 									</div>
 									<div class="content">
 										<h3>Quick Refund</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p-->
 									</div>
 								</div>
 							</div>
