--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
 										<i class="fas fa-briefcase"></i>
 									</div>
 									<div class="content">
-										<!--h3>Custom Box</h3>
+										<h3>Custom Box</h3>
 										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
 									</div>
 								</div>
