--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-6 col-md-6 mb-5 mb-md-5">
+							<!--div class="col-lg-6 col-md-6 mb-5 mb-md-5">
 								<div class="list-box d-flex">
 									<div class="list-icon">
 										<i class="fas fa-briefcase"></i>
