change durian name

--- a/shop.html
+++ b/shop.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+52+
+<963!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -149,9 +150,9 @@
                     <div class="product-filters">
                         <ul>
                             <li class="active" data-filter="*">All</li>
-                            <li data-filter=".strawberry">Strawberry</li>
-                            <li data-filter=".berry">Berry</li>
-                            <li data-filter=".lemon">Lemon</li>
+                            <li data-filter=".strawberry">Fresh Durian</li>
+                            <li data-filter=".berry">Paked Durian</li>
+                            <li data-filter=".lemon">Durian Paste</li>
                         </ul>
                     </div>
                 </div>
@@ -163,8 +164,8 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
 						</div>
-						<h3>Strawberry</h3>
-						<p class="product-price"><span>Per Kg</span> 85$ </p>
+						<h3>Fresh Durian</h3>
+						<p class="product-price"><span>Per Kg</span> RM65 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -173,8 +174,8 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
 						</div>
-						<h3>Berry</h3>
-						<p class="product-price"><span>Per Kg</span> 70$ </p>
+						<h3>Paked Durian</h3>
+						<p class="product-price"><span>500g</span> RM85 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -183,8 +184,8 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
 						</div>
-						<h3>Lemon</h3>
-						<p class="product-price"><span>Per Kg</span> 35$ </p>
+						<h3>Durian Paste</h3>
+						<p class="product-price"><span>Per Kg</span> RM 95 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -193,8 +194,8 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-4.jpg" alt=""></a>
 						</div>
-						<h3>Avocado</h3>
-						<p class="product-price"><span>Per Kg</span> 50$ </p>
+						<h3>Sultan King</h3>
+						<p class="product-price"><span>Per Kg</span> RM45 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -203,8 +204,8 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-5.jpg" alt=""></a>
 						</div>
-						<h3>Green Apple</h3>
-						<p class="product-price"><span>Per Kg</span> 45$ </p>
+						<h3>Black Thorn</h3>
+						<p class="product-price"><span>Per Kg</span> RM75 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -213,8 +214,8 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-6.jpg" alt=""></a>
 						</div>
-						<h3>Strawberry</h3>
-						<p class="product-price"><span>Per Kg</span> 80$ </p>
+						<h3>Tekka</h3>
+						<p class="product-price"><span>Per Kg</span> RM45 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
