--- a/shop.html
+++ b/shop.html
@@ -225,10 +225,10 @@
 				<div class="col-lg-12 text-center">
 					<div class="pagination-wrap">
 						<ul>
-							<li><a href="#">Prev</a></li>
-							<li><a href="#">1</a></li>
+							<!--li><a href="#">Prev</a></li>
+							<li><a href="#">1</a></li-->
 							<li><a class="active" href="#">2</a></li>
-							<li><a href="#">3</a></li>
+							<!--li><a href="#">3</a></li>
 							<li><a href="#">Next</a></li>
 						</ul>
 					</div>
