--- a/shop.html
+++ b/shop.html
@@ -225,18 +225,18 @@
 				<div class="col-lg-12 text-center">
 					<div class="pagination-wrap">
 						<ul>
-							<li><a href="#">Prev</a></li>
-							<li><a href="#">1</a></li>
+							<!--li><a href="#">Prev</a></li>
+							<li><a href="#">1</a></li-->
 							<li><a class="active" href="#">1</a></li>
-							<li><a href="#">3</a></li>
-							<!--li><a href="#">Next</a></li>
+							<!--li><a href="#">3</a></li>
+							<li><a href="#">Next</a></li-->
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<-- end products -->
+	<!-- end products -->
 
 	<!-- logo carousel -->
 	<div class="logo-carousel-section">
