--- a/shop.html
+++ b/shop.html
@@ -151,7 +151,7 @@
                         <ul>
                             <li class="active" data-filter="*">All</li>
                             <li data-filter=".strawberry">Fresh Durian</li>
-                            <li data-filter=".berry">Paked Durian</li>
+                            <li data-filter=".berry">Packed Durian</li>
                             <li data-filter=".lemon">Durian Paste</li>
                         </ul>
                     </div>
@@ -174,7 +174,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
 						</div>
-						<h3>Paked Durian</h3>
+						<h3>Packed Durian</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
