change check out

--- a/checkout.html
+++ b/checkout.html
@@ -222,30 +222,30 @@
 									<td>Total</td>
 								</tr>
 								<tr>
-									<td>Strawberry</td>
-									<td>$85.00</td>
+									<td>Musang King </td>
+									<td>RM65.00</td>
 								</tr>
 								<tr>
-									<td>Berry</td>
-									<td>$70.00</td>
+									<td>Sultan King</td>
+									<td>RM45.00</td>
 								</tr>
 								<tr>
-									<td>Lemon</td>
-									<td>$35.00</td>
+									<td>Packed MK Durian</td>
+									<td>RM85.00</td>
 								</tr>
 							</tbody>
 							<tbody class="checkout-details">
 								<tr>
 									<td>Subtotal</td>
-									<td>$190</td>
+									<td>RM195</td>
 								</tr>
 								<tr>
 									<td>Shipping</td>
-									<td>$50</td>
+									<td>RM30</td>
 								</tr>
 								<tr>
 									<td>Total</td>
-									<td>$240</td>
+									<td>RM225</td>
 								</tr>
 							</tbody>
 						</table>
